cmake_minimum_required(VERSION 3.20)

project(SonicCD LANGUAGES C)

find_package(SDL2 REQUIRED)

set(USE_MPEG OFF)
set(USE_VORBIS OFF)
set(USE_FFMPEG OFF)
set(USE_G7221 OFF)
set(USE_G719 OFF)
set(USE_ATRAC9 OFF)
set(USE_CELT OFF)
set(USE_SPEEX OFF)
set(BUILD_CLI OFF)
set(BUILD_FB2K OFF)
set(BUILD_WINAMP OFF)
set(BUILD_XMPLAY OFF)
set(BUILD_V123 OFF)
set(BUILD_AUDACIOUS OFF)
add_subdirectory("src/LAUNCHER/vgmstream" EXCLUDE_FROM_ALL)

function(make_level ROUND ZONE TIME CG_CHANGE)
	set(SOURCES
		"src/ACTION.C"
		"src/ACTSET.C"
		"src/BLOCK.C"
		"src/BMP.C"
		"src/DAI_K.C"
		"src/DAI_RD1.C"
		"src/DIRCOL.C"
		"src/DUMMY.C"
		"src/EDIT.C"
		"src/EQU.C"
		"src/ETC.C"
		"src/FCOL.C"
		"src/GOAL.C"
		"src/IO.C"
		"src/ITEM.C"
		"src/LOADER2.C"
		"src/PLAYER.C"
		"src/PLAYPAT1.C"
		"src/PLCHG.C"
		"src/RIDECHK.C"
		"src/RING.C"
		"src/SAVE.C"
		"src/SCORE.C"
		"src/SPRING.C"
		"src/SUICIDE.C"
		"src/TAKI.C"
		"src/TBL0.C"
		"src/TBL1.C"
		"src/TREE.C"
		"src/ZONE.C"
		"src/R${ROUND}/COL${ROUND}${TIME}.C"
		"src/R${ROUND}/COLI${ROUND}.C"
		"src/R${ROUND}/DEV${ROUND}${ZONE}${TIME}.C"
		"src/R${ROUND}/FRIEND${ROUND}.C"
		"src/R${ROUND}/Z${ROUND}${ZONE}ACT.C"
		"src/R${ROUND}/Z${ROUND}${ZONE}${TIME}TBL.C"
		"src/LAUNCHER/MAIN.C"
		"src/LAUNCHER/IO.C"
		"src/LAUNCHER/LZSS.C"
		"src/LAUNCHER/SOUND.C"
		"src/LAUNCHER/SZDD.C"
		${ARGN}
	)

	set_source_files_properties(${SOURCES} PROPERTIES LANGUAGE C)

	set(EXECUTABLE_NAME "R${ROUND}${ZONE}${TIME}")

	add_executable(${EXECUTABLE_NAME} WIN32
		${SOURCES}
	)

	set_target_properties(${EXECUTABLE_NAME} PROPERTIES
		C_STANDARD 99
	)

	target_compile_definitions(${EXECUTABLE_NAME} PRIVATE R${ROUND} R${ROUND}${ZONE} R${ROUND}${ZONE}${TIME})
	target_compile_definitions(${EXECUTABLE_NAME} PRIVATE LEVEL_ROUND=${ROUND} LEVEL_ZONE=${ZONE} LEVEL_TIME=${TIME})

	if (CG_CHANGE)
		target_compile_definitions(${EXECUTABLE_NAME} PRIVATE CG_CHANGE)
	endif()

	target_link_libraries(${EXECUTABLE_NAME} PRIVATE SDL2::SDL2main SDL2::SDL2)
	if(BUILD_SHARED_LIBS)
		target_link_libraries(${EXECUTABLE_NAME} PRIVATE libvgmstream_shared)
	else()
		target_link_libraries(${EXECUTABLE_NAME} PRIVATE libvgmstream)
	endif()
endfunction()

make_level(1 1 A OFF
	"src/EMIE1.C"
	"src/EMIE1CG.C"
	"src/ENEMY.C"
	"src/ET1.C"
	"src/GAME.C"
	"src/PLAYSP.C"
	"src/PLAYSUB.C"
	"src/SCRCHK.C"
	"src/ZONETBL1.C"
	"src/R1/ACT11A.C"
	"src/R1/EDTBL11A.C"
	"src/R1/KOWASI1.C"
	"src/R1/KUZURE.C"
	"src/R1/KUZUR11A.C"
	"src/R1/MOVIE1.C"
	"src/R1/SCR11A.C"
	"src/R1/SHOOT1.C"
	"src/R1/SIKAKE.C"
)

make_level(1 1 B OFF
	"src/ENEMY.C"
	"src/ET1.C"
	"src/GAME.C"
	"src/PLAYSP.C"
	"src/PLAYSUB.C"
	"src/SCRCHK.C"
	"src/ZONETBL1.C"
	"src/R1/ACT11B.C"
	"src/R1/EDTBL11B.C"
	"src/R1/KOWASI1.C"
	"src/R1/KUZURE.C"
	"src/R1/KUZUR11B.C"
	"src/R1/MOVIE1.C"
	"src/R1/SCR11B.C"
	"src/R1/SHOOT1.C"
	"src/R1/SIKAKE.C"
)

make_level(1 1 C OFF
	"src/ENEMY.C"
	"src/ET1.C"
	"src/GAME.C"
	"src/PLAYSP.C"
	"src/PLAYSUB.C"
	"src/SCRCHK.C"
	"src/ZONETBL1.C"
	"src/R1/ACT11B.C"
	"src/R1/EDTBL11C.C"
	"src/R1/KOWASI1.C"
	"src/R1/KUZURE.C"
	"src/R1/KUZUR11C.C"
	"src/R1/MOVIE1.C"
	"src/R1/SCR11C.C"
	"src/R1/SHOOT1.C"
	"src/R1/SIKAKE.C"
)

make_level(1 1 D OFF
	"src/ENEMY.C"
	"src/ET1.C"
	"src/GAME.C"
	"src/PLAYSP.C"
	"src/PLAYSUB.C"
	"src/SCRCHK.C"
	"src/ZONETBL1.C"
	"src/R1/ACT11B.C"
	"src/R1/EDTBL11D.C"
	"src/R1/KOWASI1.C"
	"src/R1/KUZURE.C"
	"src/R1/KUZUR11D.C"
	"src/R1/MOVIE1.C"
	"src/R1/SCR11D.C"
	"src/R1/SHOOT1.C"
	"src/R1/SIKAKE.C"
)

make_level(1 2 A OFF
	"src/BRANKO1.C"
	"src/ENEMY.C"
	"src/ET1.C"
	"src/GAME.C"
	"src/PLAYSP.C"
	"src/PLAYSUB.C"
	"src/SCRCHK.C"
	"src/ZONETBL1.C"
	"src/R1/ACT12A.C"
	"src/R1/EDTBL12A.C"
	"src/R1/KOWASI1.C"
	"src/R1/KUZURE.C"
	"src/R1/KUZUR12A.C"
	"src/R1/MOVIE1.C"
	"src/R1/SCR12A.C"
	"src/R1/SHOOT1.C"
	"src/R1/SIKAKE.C"
)

make_level(1 2 B OFF
	"src/BRANKO1.C"
	"src/ENEMY.C"
	"src/ET1.C"
	"src/GAME.C"
	"src/PLAYSP.C"
	"src/PLAYSUB.C"
	"src/SCRCHK.C"
	"src/ZONETBL1.C"
	"src/R1/ACT12A.C"
	"src/R1/EDTBL12B.C"
	"src/R1/KOWASI1.C"
	"src/R1/KUZURE.C"
	"src/R1/KUZUR12B.C"
	"src/R1/MOVIE1.C"
	"src/R1/SCR12B.C"
	"src/R1/SHOOT1.C"
	"src/R1/SIKAKE.C"
)

make_level(1 2 C OFF
	"src/BRANKO1.C"
	"src/ENEMY.C"
	"src/ET1.C"
	"src/GAME.C"
	"src/PLAYSP.C"
	"src/PLAYSUB.C"
	"src/SCRCHK.C"
	"src/ZONETBL1.C"
	"src/R1/ACT12A.C"
	"src/R1/EDTBL12C.C"
	"src/R1/KOWASI1.C"
	"src/R1/KUZURE.C"
	"src/R1/KUZUR12C.C"
	"src/R1/MOVIE1.C"
	"src/R1/SCR12C.C"
	"src/R1/SHOOT1.C"
	"src/R1/SIKAKE.C"
)

make_level(1 2 D OFF
	"src/BRANKO1.C"
	"src/ENEMY.C"
	"src/ET1.C"
	"src/GAME.C"
	"src/PLAYSP.C"
	"src/PLAYSUB.C"
	"src/SCRCHK.C"
	"src/ZONETBL1.C"
	"src/R1/ACT12A.C"
	"src/R1/EDTBL12D.C"
	"src/R1/KOWASI1.C"
	"src/R1/KUZURE.C"
	"src/R1/KUZUR12D.C"
	"src/R1/MOVIE1.C"
	"src/R1/SCR12D.C"
	"src/R1/SHOOT1.C"
	"src/R1/SIKAKE.C"
)

make_level(1 3 C OFF
	"src/ENEMY.C"
	"src/ET1.C"
	"src/GAME.C"
	"src/PLAYSP.C"
	"src/PLAYSUB.C"
	"src/SCRCHK.C"
	"src/ZONETBL1.C"
	"src/R1/ACT13C.C"
	"src/R1/BOSS_1.C"
	"src/R1/EDTBL13C.C"
	"src/R1/KOWASI1.C"
	"src/R1/MOVIE1.C"
	"src/R1/SCR13C.C"
	"src/R1/SHOOT1.C"
	"src/R1/SIKAKE.C"
)

make_level(1 3 D OFF
	"src/ENEMY.C"
	"src/ET1.C"
	"src/GAME.C"
	"src/PLAYSP.C"
	"src/PLAYSUB.C"
	"src/SCRCHK.C"
	"src/ZONETBL1.C"
	"src/R1/ACT13C.C"
	"src/R1/BOSS_1.C"
	"src/R1/EDTBL13C.C"
	"src/R1/KOWASI1.C"
	"src/R1/MOVIE1.C"
	"src/R1/SCR13D.C"
	"src/R1/SHOOT1.C"
	"src/R1/SIKAKE.C"
)

make_level(3 1 A OFF
	"src/ET1.C"
	"src/GAME.C"
	"src/PLAYSP.C"
	"src/PLAYSUB.C"
	"src/SCRCHK.C"
	"src/ZONETBL1.C"
	"src/R3/ACT31A.C"
	"src/R3/BANPA.C"
	"src/R3/BOBIN.C"
	"src/R3/BOBINB.C"
	"src/R3/EDTBL31A.C"
	"src/R3/GA3.C"
	"src/R3/KAMA.C"
	"src/R3/MECASNC.C"
	"src/R3/MIRACLE.C"
	"src/R3/MSNCCG.C"
	"src/R3/POCKET.C"
	"src/R3/MOVIE3.C"
	"src/R3/SCR31A.C"
	"src/R3/TENTOU.C"
	"src/R3/TOGEBL3A.C"
	"src/R3/TRAP_R3.C"
)

make_level(3 1 B OFF
	"src/ET1.C"
	"src/GAME.C"
	"src/PLAYSP.C"
	"src/PLAYSUB.C"
	"src/SCRCHK.C"
	"src/ZONETBL1.C"
	"src/R3/ACT31B.C"
	"src/R3/BANPA.C"
	"src/R3/BOBIN.C"
	"src/R3/BOBINB.C"
	"src/R3/EDTBL31B.C"
	"src/R3/GA3.C"
	"src/R3/KAMA.C"
	"src/R3/MIRACLE.C"
	"src/R3/MSNCCG.C"
	"src/R3/POCKET.C"
	"src/R3/MOVIE3.C"
	"src/R3/SCR31B.C"
	"src/R3/TENTOU.C"
	"src/R3/TOGEBL3B.C"
	"src/R3/TRAP_R3.C"
)

make_level(3 1 C OFF
	"src/ET1.C"
	"src/GAME.C"
	"src/PLAYSP.C"
	"src/PLAYSUB.C"
	"src/SCRCHK.C"
	"src/ZONETBL1.C"
	"src/R3/ACT31B.C"
	"src/R3/BANPA.C"
	"src/R3/BOBIN.C"
	"src/R3/BOBINB.C"
	"src/R3/EDTBL31C.C"
	"src/R3/GA3.C"
	"src/R3/KAMA.C"
	"src/R3/MIRACLE.C"
	"src/R3/MOVIE3.C"
	"src/R3/MSNCCG.C"
	"src/R3/POCKET.C"
	"src/R3/SCR31C.C"
	"src/R3/TENTOU.C"
	"src/R3/TOGEBL3D.C"
	"src/R3/TRAP_R3.C"
)

make_level(3 1 D OFF
	"src/ET1.C"
	"src/GAME.C"
	"src/PLAYSP.C"
	"src/PLAYSUB.C"
	"src/SCRCHK.C"
	"src/ZONETBL1.C"
	"src/R3/ACT31B.C"
	"src/R3/BANPA.C"
	"src/R3/BOBIN.C"
	"src/R3/BOBINB.C"
	"src/R3/EDTBL31D.C"
	"src/R3/GA3.C"
	"src/R3/KAMA.C"
	"src/R3/MIRACLE.C"
	"src/R3/MOVIE3.C"
	"src/R3/MSNCCG.C"
	"src/R3/POCKET.C"
	"src/R3/SCR31D.C"
	"src/R3/TENTOU.C"
	"src/R3/TOGEBL3D.C"
	"src/R3/TRAP_R3.C"
)

make_level(3 2 A ON
	"src/ET1.C"
	"src/GAME.C"
	"src/PLAYSP.C"
	"src/PLAYSUB.C"
	"src/SCRCHK.C"
	"src/ZONETBL1.C"
	"src/R3/ACT32A.C"
	"src/R3/BANPA.C"
	"src/R3/BOBIN.C"
	"src/R3/BOBINB.C"
	"src/R3/EDTBL32A.C"
	"src/R3/GA3.C"
	"src/R3/KAMA.C"
	"src/R3/MECASNC.C"
	"src/R3/MOVIE3.C"
	"src/R3/MIRACLE.C"
	"src/R3/MSNCCG.C"
	"src/R3/POCKET.C"
	"src/R3/SCR32A.C"
	"src/R3/TENTOU.C"
	"src/R3/TOGEBL3A.C"
	"src/R3/TRAP_R3.C"
)

make_level(3 2 B OFF
	"src/ET1.C"
	"src/GAME.C"
	"src/PLAYSP.C"
	"src/PLAYSUB.C"
	"src/SCRCHK.C"
	"src/ZONETBL1.C"
	"src/R3/ACT32A.C"
	"src/R3/BANPA.C"
	"src/R3/BOBIN.C"
	"src/R3/BOBINB.C"
	"src/R3/EDTBL32B.C"
	"src/R3/GA3.C"
	"src/R3/KAMA.C"
	"src/R3/MIRACLE.C"
	"src/R3/MOVIE3.C"
	"src/R3/MSNCCG.C"
	"src/R3/POCKET.C"
	"src/R3/SCR32B.C"
	"src/R3/TENTOU.C"
	"src/R3/TOGEBL3B.C"
	"src/R3/TRAP_R3.C"
)

make_level(3 2 C ON
	"src/ET1.C"
	"src/GAME.C"
	"src/PLAYSP.C"
	"src/PLAYSUB.C"
	"src/SCRCHK.C"
	"src/ZONETBL1.C"
	"src/R3/ACT32A.C"
	"src/R3/BANPA.C"
	"src/R3/BOBIN.C"
	"src/R3/BOBINB.C"
	"src/R3/EDTBL32C.C"
	"src/R3/GA3.C"
	"src/R3/KAMA.C"
	"src/R3/MIRACLE.C"
	"src/R3/MOVIE3.C"
	"src/R3/MSNCCG.C"
	"src/R3/POCKET.C"
	"src/R3/SCR32C.C"
	"src/R3/TENTOU.C"
	"src/R3/TOGEBL3D.C"
	"src/R3/TRAP_R3.C"
)

make_level(3 2 D ON
	"src/ET1.C"
	"src/GAME.C"
	"src/PLAYSP.C"
	"src/PLAYSUB.C"
	"src/SCRCHK.C"
	"src/ZONETBL1.C"
	"src/R3/ACT32A.C"
	"src/R3/BANPA.C"
	"src/R3/BOBIN.C"
	"src/R3/BOBINB.C"
	"src/R3/EDTBL32D.C"
	"src/R3/GA3.C"
	"src/R3/KAMA.C"
	"src/R3/MIRACLE.C"
	"src/R3/MOVIE3.C"
	"src/R3/MSNCCG.C"
	"src/R3/POCKET.C"
	"src/R3/SCR32D.C"
	"src/R3/TENTOU.C"
	"src/R3/TOGEBL3D.C"
	"src/R3/TRAP_R3.C"
)

make_level(3 3 C OFF
	"src/ET1.C"
	"src/GAME.C"
	"src/PLAYSP.C"
	"src/PLAYSUB.C"
	"src/SCRCHK.C"
	"src/ZONETBL1.C"
	"src/R3/ACT33C.C"
	"src/R3/BANPA.C"
	"src/R3/BOBIN.C"
	"src/R3/BOBINB.C"
	"src/R3/BOSS_3.C"
	"src/R3/EDTBL33C.C"
	"src/R3/GA3.C"
	"src/R3/GATE.C"
	"src/R3/KAMA.C"
	"src/R3/LIGHT.C"
	"src/R3/MIRACLE.C"
	"src/R3/MOVIE3.C"
	"src/R3/MSNCCG.C"
	"src/R3/POCKET.C"
	"src/R3/ROLLPLAT.C"
	"src/R3/SCR33C.C"
	"src/R3/SIKAKE33.C"
	"src/R3/STOPPER.C"
	"src/R3/TENTOU.C"
	"src/R3/TOGEBL3D.C"
	"src/R3/TRAP_R3.C"
)

make_level(3 3 D OFF
	"src/ET1.C"
	"src/GAME.C"
	"src/PLAYSP.C"
	"src/PLAYSUB.C"
	"src/SCRCHK.C"
	"src/ZONETBL1.C"
	"src/R3/ACT33C.C"
	"src/R3/BANPA.C"
	"src/R3/BOBIN.C"
	"src/R3/BOBINB.C"
	"src/R3/BOSS_3.C"
	"src/R3/EDTBL33C.C"
	"src/R3/GA3.C"
	"src/R3/GATE.C"
	"src/R3/KAMA.C"
	"src/R3/LIGHT.C"
	"src/R3/MIRACLE.C"
	"src/R3/MOVIE3.C"
	"src/R3/MSNCCG.C"
	"src/R3/POCKET.C"
	"src/R3/ROLLPLAT.C"
	"src/R3/SCR33D.C"
	"src/R3/SIKAKE33.C"
	"src/R3/STOPPER.C"
	"src/R3/TENTOU.C"
	"src/R3/TOGEBL3D.C"
	"src/R3/TRAP_R3.C"
)

make_level(4 1 A ON
	"src/ET1.C"
	"src/PLAYSP.C"
	"src/SCRCHK.C"
	"src/ZONETBL1.C"
	"src/R4/ACT41A.C"
	"src/R4/AMENBO.C"
	"src/R4/AWA.C"
	"src/R4/BRUNKO4.C"
	"src/R4/EDTBL41A.C"
	"src/R4/ESCAL4.C"
	"src/R4/FUNSUI4.C"
	"src/R4/GAME4.C"
	"src/R4/HARID4.C"
	"src/R4/HARIR4.C"
	"src/R4/KUZURE4.C"
	"src/R4/PLAYSUB4.C"
	"src/R4/MOVIE4.C"
	"src/R4/SCR41A.C"
	"src/R4/SCREW_A.C"
	"src/R4/SW4.C"
	"src/R4/SWBLK4.C"
	"src/R4/TAGAMEB4.C"
	"src/R4/TEKKYU.C"
	"src/R4/TOBIRA4.C"
	"src/R4/TONBO.C"
	"src/R4/WALL1.C"
	"src/R4/WALLS.C"
	"src/R4/WTBL41A.C"
	"src/R4/YAGO.C"
)

make_level(4 1 B OFF
	"src/ET1.C"
	"src/PLAYSP.C"
	"src/SCRCHK.C"
	"src/ZONETBL1.C"
	"src/R4/ACT41B.C"
	"src/R4/AMENBO.C"
	"src/R4/AWA.C"
	"src/R4/BRUNKO4.C"
	"src/R4/EDTBL41B.C"
	"src/R4/ESCAL4.C"
	"src/R4/FUNSUI4.C"
	"src/R4/GAME4.C"
	"src/R4/HARID4.C"
	"src/R4/HARIR4.C"
	"src/R4/KUZURE4.C"
	"src/R4/LRBLK4.C"
	"src/R4/PLAYSUB4.C"
	"src/R4/RBLK4.C"
	"src/R4/MOVIE4.C"
	"src/R4/SCR41B.C"
	"src/R4/SCREW_A.C"
	"src/R4/SW4.C"
	"src/R4/SWBLK4.C"
	"src/R4/TAGAMEB4.C"
	"src/R4/TEKKYU.C"
	"src/R4/TOBIRA4.C"
	"src/R4/TONBO.C"
	"src/R4/UDBLK4.C"
	"src/R4/WALL1.C"
	"src/R4/WALLS.C"
	"src/R4/WTBL41B.C"
	"src/R4/YAGO.C"
)

make_level(4 1 C OFF
	"src/ET1.C"
	"src/PLAYSP.C"
	"src/SCRCHK.C"
	"src/ZONETBL1.C"
	"src/R4/ACT41C.C"
	"src/R4/AMENBO.C"
	"src/R4/AWA.C"
	"src/R4/BRUNKO4.C"
	"src/R4/EDTBL41C.C"
	"src/R4/ESCAL4.C"
	"src/R4/FUNSUI4.C"
	"src/R4/GAME4.C"
	"src/R4/HARID4.C"
	"src/R4/HARIR4.C"
	"src/R4/KUZURE4.C"
	"src/R4/LRBLK4.C"
	"src/R4/PLAYSUB4.C"
	"src/R4/RBLK4.C"
	"src/R4/RENKETU4.C"
	"src/R4/MOVIE4.C"
	"src/R4/SCR41C.C"
	"src/R4/SCREW_C.C"
	"src/R4/SW4.C"
	"src/R4/SWBLK4.C"
	"src/R4/SWGUN4.C"
	"src/R4/TAGAMEB4.C"
	"src/R4/TEKKYU4.C"
	"src/R4/TOBIRA4.C"
	"src/R4/TONBO.C"
	"src/R4/UDBLK4.C"
	"src/R4/WALL1.C"
	"src/R4/WALLS.C"
	"src/R4/WTBL41C.C"
	"src/R4/YAGO.C"
)

make_level(4 1 D OFF
	"src/ET1.C"
	"src/PLAYSP.C"
	"src/SCRCHK.C"
	"src/ZONETBL1.C"
	"src/R4/ACT41C.C"
	"src/R4/AMENBO.C"
	"src/R4/AWA.C"
	"src/R4/BRUNKO4.C"
	"src/R4/EDTBL41C.C"
	"src/R4/ESCAL4.C"
	"src/R4/FUNSUI4.C"
	"src/R4/GAME4.C"
	"src/R4/HARID4.C"
	"src/R4/HARIR4.C"
	"src/R4/KUZURE4.C"
	"src/R4/LRBLK4.C"
	"src/R4/PLAYSUB4.C"
	"src/R4/RBLK4.C"
	"src/R4/RENKETU4.C"
	"src/R4/MOVIE4.C"
	"src/R4/SCR41D.C"
	"src/R4/SCREW_C.C"
	"src/R4/SW4.C"
	"src/R4/SWBLK4.C"
	"src/R4/SWGUN4.C"
	"src/R4/TAGAMEB4.C"
	"src/R4/TEKKYU4.C"
	"src/R4/TOBIRA4.C"
	"src/R4/TONBO.C"
	"src/R4/UDBLK4.C"
	"src/R4/WALL1.C"
	"src/R4/WALLS.C"
	"src/R4/WTBL41C.C"
	"src/R4/YAGO.C"
)

make_level(4 2 A OFF
	"src/ET1.C"
	"src/PLAYSP.C"
	"src/SCRCHK.C"
	"src/ZONETBL1.C"
	"src/R4/ACT42A.C"
	"src/R4/AMENBO.C"
	"src/R4/AWA.C"
	"src/R4/BRUNKO4.C"
	"src/R4/EDTBL42A.C"
	"src/R4/ESCAL4.C"
	"src/R4/FUNSUI4.C"
	"src/R4/GAME4.C"
	"src/R4/HARID4.C"
	"src/R4/HARIR4.C"
	"src/R4/KUZURE4.C"
	"src/R4/LRBLK4.C"
	"src/R4/OSUMIZU.C"
	"src/R4/PLAYSUB4.C"
	"src/R4/MOVIE4.C"
	"src/R4/SCR42A.C"
	"src/R4/SCREW_A.C"
	"src/R4/SW4.C"
	"src/R4/SWBLK4.C"
	"src/R4/TAGAMEB4.C"
	"src/R4/TEKKYU.C"
	"src/R4/TEKKYU1.C"
	"src/R4/TOBIRA4.C"
	"src/R4/TOBIRAS4.C"
	"src/R4/TONBO.C"
	"src/R4/UKIDAI.C"
	"src/R4/WALL1.C"
	"src/R4/WALL42.C"
	"src/R4/WALLS.C"
	"src/R4/WTBL42A.C"
	"src/R4/YAGO.C"
)

make_level(4 2 B OFF
	"src/ET1.C"
	"src/PLAYSP.C"
	"src/SCRCHK.C"
	"src/ZONETBL1.C"
	"src/R4/ACT42B.C"
	"src/R4/AMENBO.C"
	"src/R4/AWA.C"
	"src/R4/BRUNKO4.C"
	"src/R4/EDTBL42B.C"
	"src/R4/ESCAL4.C"
	"src/R4/FUNSUI4.C"
	"src/R4/GAME4.C"
	"src/R4/HARID4.C"
	"src/R4/HARIR4.C"
	"src/R4/KUZURE4.C"
	"src/R4/LRBLK4.C"
	"src/R4/OSUMIZU.C"
	"src/R4/PLAYSUB4.C"
	"src/R4/RBLK4.C"
	"src/R4/MOVIE4.C"
	"src/R4/SCR42A.C"
	"src/R4/SCREW_A.C"
	"src/R4/SW4.C"
	"src/R4/SWBLK4.C"
	"src/R4/TAGAMEB4.C"
	"src/R4/TEKKYU.C"
	"src/R4/TEKKYU1.C"
	"src/R4/TOBIRA4.C"
	"src/R4/TOBIRAS4.C"
	"src/R4/TONBO.C"
	"src/R4/UDBLK4.C"
	"src/R4/UKIDAI.C"
	"src/R4/WALL1.C"
	"src/R4/WALL42.C"
	"src/R4/WALLS.C"
	"src/R4/WTBL42B.C"
	"src/R4/YAGO.C"
)

make_level(4 2 C OFF
	"src/ET1.C"
	"src/PLAYSP.C"
	"src/SCRCHK.C"
	"src/ZONETBL1.C"
	"src/R4/ACT42C.C"
	"src/R4/AMENBO.C"
	"src/R4/AWA.C"
	"src/R4/BANEIWA.C"
	"src/R4/BRUNKO4.C"
	"src/R4/DAID4.C"
	"src/R4/EDTBL42C.C"
	"src/R4/ESCAL4.C"
	"src/R4/FUNSUI4.C"
	"src/R4/GAME4.C"
	"src/R4/HARID4.C"
	"src/R4/HARIR4.C"
	"src/R4/KOWASI4.C"
	"src/R4/KUZURE4.C"
	"src/R4/LRBLK4.C"
	"src/R4/OSUMIZU.C"
	"src/R4/PLAYSUB4.C"
	"src/R4/RBLK4.C"
	"src/R4/RENKETU4.C"
	"src/R4/MOVIE4.C"
	"src/R4/SCR42C.C"
	"src/R4/SCREW_C.C"
	"src/R4/SW4.C"
	"src/R4/SWBLK4.C"
	"src/R4/TAGAMEB4.C"
	"src/R4/TEKKYU.C"
	"src/R4/TEKKYU1.C"
	"src/R4/TEKKYU4.C"
	"src/R4/TOBIRA4.C"
	"src/R4/TOBIRAS4.C"
	"src/R4/TONBO.C"
	"src/R4/UDBLK4.C"
	"src/R4/UKIDAI.C"
	"src/R4/WALL1.C"
	"src/R4/WALL42.C"
	"src/R4/WALLS.C"
	"src/R4/WTBL42C.C"
	"src/R4/YAGO.C"
)

make_level(4 2 D OFF
	"src/ET1.C"
	"src/PLAYSP.C"
	"src/SCRCHK.C"
	"src/ZONETBL1.C"
	"src/R4/ACT42C.C"
	"src/R4/AMENBO.C"
	"src/R4/AWA.C"
	"src/R4/BANEIWA.C"
	"src/R4/BRUNKO4.C"
	"src/R4/DAID4.C"
	"src/R4/EDTBL42C.C"
	"src/R4/ESCAL4.C"
	"src/R4/FUNSUI4.C"
	"src/R4/GAME4.C"
	"src/R4/HARID4.C"
	"src/R4/HARIR4.C"
	"src/R4/KOWASI4.C"
	"src/R4/KUZURE4.C"
	"src/R4/LRBLK4.C"
	"src/R4/OSUMIZU.C"
	"src/R4/PLAYSUB4.C"
	"src/R4/RBLK4.C"
	"src/R4/RENKETU4.C"
	"src/R4/MOVIE4.C"
	"src/R4/SCR42C.C"
	"src/R4/SCREW_C.C"
	"src/R4/SW4.C"
	"src/R4/SWBLK4.C"
	"src/R4/TAGAMEB4.C"
	"src/R4/TEKKYU.C"
	"src/R4/TEKKYU1.C"
	"src/R4/TEKKYU4.C"
	"src/R4/TOBIRA4.C"
	"src/R4/TOBIRAS4.C"
	"src/R4/TONBO.C"
	"src/R4/UDBLK4.C"
	"src/R4/UKIDAI.C"
	"src/R4/WALL1.C"
	"src/R4/WALL42.C"
	"src/R4/WALLS.C"
	"src/R4/WTBL42C.C"
	"src/R4/YAGO.C"
)

make_level(4 3 C OFF
	"src/ET1.C"
	"src/PLAYSP.C"
	"src/SCRCHK.C"
	"src/ZONETBL1.C"
	"src/R4/ACT43C.C"
	"src/R4/AMENBO.C"
	"src/R4/AWA.C"
	"src/R4/BANEIWA.C"
	"src/R4/BRUNKO4.C"
	"src/R4/BOSS_4.C"
	"src/R4/BOSS_4_2.C"
	"src/R4/DAID4.C"
	"src/R4/EDTBL43C.C"
	"src/R4/ESCAL4.C"
	"src/R4/FUNSUI4.C"
	"src/R4/GAME4.C"
	"src/R4/HARID4.C"
	"src/R4/HARIR4.C"
	"src/R4/KOWASI4.C"
	"src/R4/KUZURE4.C"
	"src/R4/LRBLK4.C"
	"src/R4/OSUMIZU.C"
	"src/R4/PLAYSUB4.C"
	"src/R4/RBLK4.C"
	"src/R4/RENKETU4.C"
	"src/R4/MOVIE4.C"
	"src/R4/SCR43C.C"
	"src/R4/SCREW_C.C"
	"src/R4/SW4.C"
	"src/R4/SWBLK4.C"
	"src/R4/TAGAMEB4.C"
	"src/R4/TEKKYU.C"
	"src/R4/TEKKYU1.C"
	"src/R4/TEKKYU4.C"
	"src/R4/TOBIRA4.C"
	"src/R4/TOBIRAS4.C"
	"src/R4/TONBO.C"
	"src/R4/UDBLK4.C"
	"src/R4/UKIDAI.C"
	"src/R4/WALL1.C"
	"src/R4/WALL4.C"
	"src/R4/WALL42.C"
	"src/R4/WALLS.C"
	"src/R4/WTBL43.C"
	"src/R4/YAGO.C"
)

make_level(4 3 D OFF
	"src/ET1.C"
	"src/PLAYSP.C"
	"src/SCRCHK.C"
	"src/ZONETBL1.C"
	"src/R4/ACT43C.C"
	"src/R4/AMENBO.C"
	"src/R4/AWA.C"
	"src/R4/BANEIWA.C"
	"src/R4/BRUNKO4.C"
	"src/R4/BOSS_4.C"
	"src/R4/BOSS_4_2.C"
	"src/R4/DAID4.C"
	"src/R4/EDTBL43C.C"
	"src/R4/ESCAL4.C"
	"src/R4/FUNSUI4.C"
	"src/R4/GAME4.C"
	"src/R4/HARID4.C"
	"src/R4/HARIR4.C"
	"src/R4/KOWASI4.C"
	"src/R4/KUZURE4.C"
	"src/R4/LRBLK4.C"
	"src/R4/OSUMIZU.C"
	"src/R4/PLAYSUB4.C"
	"src/R4/RBLK4.C"
	"src/R4/RENKETU4.C"
	"src/R4/MOVIE4.C"
	"src/R4/SCR43C.C"
	"src/R4/SCREW_C.C"
	"src/R4/SW4.C"
	"src/R4/SWBLK4.C"
	"src/R4/TAGAMEB4.C"
	"src/R4/TEKKYU.C"
	"src/R4/TEKKYU1.C"
	"src/R4/TEKKYU4.C"
	"src/R4/TOBIRA4.C"
	"src/R4/TOBIRAS4.C"
	"src/R4/TONBO.C"
	"src/R4/UDBLK4.C"
	"src/R4/UKIDAI.C"
	"src/R4/WALL1.C"
	"src/R4/WALL4.C"
	"src/R4/WALL42.C"
	"src/R4/WALLS.C"
	"src/R4/WTBL43.C"
	"src/R4/YAGO.C"
)

make_level(5 1 A OFF
	"src/PLAYSUB.C"
	"src/SCRCHK.C"
	"src/R5/BELTSW5.C"
	"src/R5/BOSS_5.C"
	"src/R5/BURANKO5.C"
	"src/R5/DAI_RD5.C"
	"src/R5/DENDEN.C"
	"src/R5/ET5.C"
	"src/R5/FRIEND5.C"
	"src/R5/HARI5F.C"
	"src/R5/HARIR5.C"
	"src/R5/HASHI5.C"
	"src/R5/HASIRA5.C"
	"src/R5/IWA5.C"
	"src/R5/IWA5ROLL.C"
	"src/R5/IWA5WAVE.C"
	"src/R5/KEMUSI.C"
	"src/R5/KOWASI5.C"
	"src/R5/KUMO.C"
	"src/R5/KUZURE5.C"
	"src/R5/MOVIE5.C"
	"src/R5/PLAYSP5.C"
	"src/R5/SASORI.C"
	"src/R5/SHOOT5.C"
	"src/R5/ZONETBL5.C"

	"src/R5/ACT51A.C"
	"src/R5/EDTBL5.C"
	"src/R5/GAME5.C"
	"src/R5/SCR51A.C"
)

make_level(5 1 B OFF
	"src/PLAYSUB.C"
	"src/SCRCHK.C"
	"src/R5/BELTSW5.C"
	"src/R5/BOSS_5.C"
	"src/R5/BURANKO5.C"
	"src/R5/DAI_RD5.C"
	"src/R5/DENDEN.C"
	"src/R5/ET5.C"
	"src/R5/FRIEND5.C"
	"src/R5/HARI5F.C"
	"src/R5/HARIR5.C"
	"src/R5/HASHI5.C"
	"src/R5/HASIRA5.C"
	"src/R5/IWA5.C"
	"src/R5/IWA5ROLL.C"
	"src/R5/IWA5WAVE.C"
	"src/R5/KEMUSI.C"
	"src/R5/KOWASI5.C"
	"src/R5/KUMO.C"
	"src/R5/KUZURE5.C"
	"src/R5/MOVIE5.C"
	"src/R5/PLAYSP5.C"
	"src/R5/SASORI.C"
	"src/R5/SHOOT5.C"
	"src/R5/ZONETBL5.C"

	"src/R5/ACT51A.C"
	"src/R5/EDTBL5.C"
	"src/R5/GAME5.C"
	"src/R5/SCR51B.C"
)

make_level(5 1 C OFF
	"src/PLAYSUB.C"
	"src/SCRCHK.C"
	"src/R5/BELTSW5.C"
	"src/R5/BOSS_5.C"
	"src/R5/BURANKO5.C"
	"src/R5/DAI_RD5.C"
	"src/R5/DENDEN.C"
	"src/R5/ET5.C"
	"src/R5/FRIEND5.C"
	"src/R5/HARI5F.C"
	"src/R5/HARIR5.C"
	"src/R5/HASHI5.C"
	"src/R5/HASIRA5.C"
	"src/R5/IWA5.C"
	"src/R5/IWA5ROLL.C"
	"src/R5/IWA5WAVE.C"
	"src/R5/KEMUSI.C"
	"src/R5/KOWASI5.C"
	"src/R5/KUMO.C"
	"src/R5/KUZURE5.C"
	"src/R5/MOVIE5.C"
	"src/R5/PLAYSP5.C"
	"src/R5/SASORI.C"
	"src/R5/SHOOT5.C"
	"src/R5/ZONETBL5.C"

	"src/R5/ACT51A.C"
	"src/R5/EDTBL5.C"
	"src/R5/GAME5.C"
	"src/R5/SCR51C.C"
)

make_level(5 1 D OFF
	"src/PLAYSUB.C"
	"src/SCRCHK.C"
	"src/R5/BELTSW5.C"
	"src/R5/BOSS_5.C"
	"src/R5/BURANKO5.C"
	"src/R5/DAI_RD5.C"
	"src/R5/DENDEN.C"
	"src/R5/ET5.C"
	"src/R5/FRIEND5.C"
	"src/R5/HARI5F.C"
	"src/R5/HARIR5.C"
	"src/R5/HASHI5.C"
	"src/R5/HASIRA5.C"
	"src/R5/IWA5.C"
	"src/R5/IWA5ROLL.C"
	"src/R5/IWA5WAVE.C"
	"src/R5/KEMUSI.C"
	"src/R5/KOWASI5.C"
	"src/R5/KUMO.C"
	"src/R5/KUZURE5.C"
	"src/R5/MOVIE5.C"
	"src/R5/PLAYSP5.C"
	"src/R5/SASORI.C"
	"src/R5/SHOOT5.C"
	"src/R5/ZONETBL5.C"

	"src/R5/ACT51A.C"
	"src/R5/EDTBL5.C"
	"src/R5/GAME5.C"
	"src/R5/SCR51D.C"
)

make_level(5 2 A OFF
	"src/PLAYSUB.C"
	"src/SCRCHK.C"
	"src/R5/BELTSW5.C"
	"src/R5/BOSS_5.C"
	"src/R5/BURANKO5.C"
	"src/R5/DAI_RD5.C"
	"src/R5/DENDEN.C"
	"src/R5/ET5.C"
	"src/R5/FRIEND5.C"
	"src/R5/HARI5F.C"
	"src/R5/HARIR5.C"
	"src/R5/HASHI5.C"
	"src/R5/HASIRA5.C"
	"src/R5/IWA5.C"
	"src/R5/IWA5ROLL.C"
	"src/R5/IWA5WAVE.C"
	"src/R5/KEMUSI.C"
	"src/R5/KOWASI5.C"
	"src/R5/KUMO.C"
	"src/R5/KUZURE5.C"
	"src/R5/MOVIE5.C"
	"src/R5/PLAYSP5.C"
	"src/R5/SASORI.C"
	"src/R5/SHOOT5.C"
	"src/R5/ZONETBL5.C"

	"src/R5/ACT51A.C"
	"src/R5/EDTBL5.C"
	"src/R5/GAME5.C"
	"src/R5/SCR52A.C"
)

make_level(5 2 B OFF
	"src/PLAYSUB.C"
	"src/SCRCHK.C"
	"src/R5/BELTSW5.C"
	"src/R5/BOSS_5.C"
	"src/R5/BURANKO5.C"
	"src/R5/DAI_RD5.C"
	"src/R5/DENDEN.C"
	"src/R5/ET5.C"
	"src/R5/FRIEND5.C"
	"src/R5/HARI5F.C"
	"src/R5/HARIR5.C"
	"src/R5/HASHI5.C"
	"src/R5/HASIRA5.C"
	"src/R5/IWA5.C"
	"src/R5/IWA5ROLL.C"
	"src/R5/IWA5WAVE.C"
	"src/R5/KEMUSI.C"
	"src/R5/KOWASI5.C"
	"src/R5/KUMO.C"
	"src/R5/KUZURE5.C"
	"src/R5/MOVIE5.C"
	"src/R5/PLAYSP5.C"
	"src/R5/SASORI.C"
	"src/R5/SHOOT5.C"
	"src/R5/ZONETBL5.C"

	"src/R5/ACT51A.C"
	"src/R5/EDTBL5.C"
	"src/R5/GAME5.C"
	"src/R5/SCR52B.C"
)

make_level(5 2 C OFF
	"src/PLAYSUB.C"
	"src/SCRCHK.C"
	"src/R5/BELTSW5.C"
	"src/R5/BOSS_5.C"
	"src/R5/BURANKO5.C"
	"src/R5/DAI_RD5.C"
	"src/R5/DENDEN.C"
	"src/R5/ET5.C"
	"src/R5/FRIEND5.C"
	"src/R5/HARI5F.C"
	"src/R5/HARIR5.C"
	"src/R5/HASHI5.C"
	"src/R5/HASIRA5.C"
	"src/R5/IWA5.C"
	"src/R5/IWA5ROLL.C"
	"src/R5/IWA5WAVE.C"
	"src/R5/KEMUSI.C"
	"src/R5/KOWASI5.C"
	"src/R5/KUMO.C"
	"src/R5/KUZURE5.C"
	"src/R5/MOVIE5.C"
	"src/R5/PLAYSP5.C"
	"src/R5/SASORI.C"
	"src/R5/SHOOT5.C"
	"src/R5/ZONETBL5.C"

	"src/R5/ACT51A.C"
	"src/R5/EDTBL5.C"
	"src/R5/GAME5.C"
	"src/R5/SCR52C.C"
)

make_level(5 2 D OFF
	"src/PLAYSUB.C"
	"src/SCRCHK.C"
	"src/R5/BELTSW5.C"
	"src/R5/BOSS_5.C"
	"src/R5/BURANKO5.C"
	"src/R5/DAI_RD5.C"
	"src/R5/DENDEN.C"
	"src/R5/ET5.C"
	"src/R5/FRIEND5.C"
	"src/R5/HARI5F.C"
	"src/R5/HARIR5.C"
	"src/R5/HASHI5.C"
	"src/R5/HASIRA5.C"
	"src/R5/IWA5.C"
	"src/R5/IWA5ROLL.C"
	"src/R5/IWA5WAVE.C"
	"src/R5/KEMUSI.C"
	"src/R5/KOWASI5.C"
	"src/R5/KUMO.C"
	"src/R5/KUZURE5.C"
	"src/R5/MOVIE5.C"
	"src/R5/PLAYSP5.C"
	"src/R5/SASORI.C"
	"src/R5/SHOOT5.C"
	"src/R5/ZONETBL5.C"

	"src/R5/ACT51A.C"
	"src/R5/EDTBL5.C"
	"src/R5/GAME5.C"
	"src/R5/SCR52D.C"
)

make_level(5 3 C OFF
	"src/PLAYSUB.C"
	"src/SCRCHK.C"
	"src/R5/BELTSW5.C"
	"src/R5/BOSS_5.C"
	"src/R5/BURANKO5.C"
	"src/R5/DAI_RD5.C"
	"src/R5/DENDEN.C"
	"src/R5/ET5.C"
	"src/R5/FRIEND5.C"
	"src/R5/HARI5F.C"
	"src/R5/HARIR5.C"
	"src/R5/HASHI5.C"
	"src/R5/HASIRA5.C"
	"src/R5/IWA5.C"
	"src/R5/IWA5ROLL.C"
	"src/R5/IWA5WAVE.C"
	"src/R5/KEMUSI.C"
	"src/R5/KOWASI5.C"
	"src/R5/KUMO.C"
	"src/R5/KUZURE5.C"
	"src/R5/MOVIE5.C"
	"src/R5/PLAYSP5.C"
	"src/R5/SASORI.C"
	"src/R5/SHOOT5.C"
	"src/R5/ZONETBL5.C"

	"src/GAME.C"
	"src/R5/ACT53.C"
	"src/R5/EDTBL53.C"
	"src/R5/SCR53C.C"
)

make_level(5 3 D OFF
	"src/PLAYSUB.C"
	"src/SCRCHK.C"
	"src/R5/BELTSW5.C"
	"src/R5/BOSS_5.C"
	"src/R5/BURANKO5.C"
	"src/R5/DAI_RD5.C"
	"src/R5/DENDEN.C"
	"src/R5/ET5.C"
	"src/R5/FRIEND5.C"
	"src/R5/HARI5F.C"
	"src/R5/HARIR5.C"
	"src/R5/HASHI5.C"
	"src/R5/HASIRA5.C"
	"src/R5/IWA5.C"
	"src/R5/IWA5ROLL.C"
	"src/R5/IWA5WAVE.C"
	"src/R5/KEMUSI.C"
	"src/R5/KOWASI5.C"
	"src/R5/KUMO.C"
	"src/R5/KUZURE5.C"
	"src/R5/MOVIE5.C"
	"src/R5/PLAYSP5.C"
	"src/R5/SASORI.C"
	"src/R5/SHOOT5.C"
	"src/R5/ZONETBL5.C"

	"src/GAME.C"
	"src/R5/ACT53.C"
	"src/R5/EDTBL53.C"
	"src/R5/SCR53D.C"
)

make_level(6 1 A ON
	"src/GAME.C"
	"src/PLAYSP.C"
	"src/PLAYSUB.C"
	"src/SCRCHK.C"
	"src/R6/BATTA.C"
	"src/R6/BEEM6.C"
	"src/R6/BLOCK6.C"
	"src/R6/DAIR6.C"
	"src/R6/EGG6.C"
	"src/R6/ET6.C"
	"src/R6/FRIEND6.C"
	"src/R6/HACHI6.C"
	"src/R6/KDAI6.C"
	"src/R6/MINOMUSI.C"
	"src/R6/MOVIE6.C"
	"src/R6/PISTON6.C"
	"src/R6/SEESAW6.C"
	"src/R6/SEMI.C"
	"src/R6/SHOOT6.C"
	"src/R6/SW6.C"
	"src/R6/TOBIDAI6.C"
	"src/R6/TOBIRA6.C"
	"src/R6/TRAP_R6.C"
	"src/R6/UDBLK6.C"
	"src/R6/ZONETBL6.C"

	"src/R6/ACT61A.C"
	"src/R6/EDTBL61A.C"
	"src/R6/SCR61A.C"
	"src/R6/TOGEBL6A.C"
)

make_level(6 1 B ON
	"src/GAME.C"
	"src/PLAYSP.C"
	"src/PLAYSUB.C"
	"src/SCRCHK.C"
	"src/R6/BATTA.C"
	"src/R6/BEEM6.C"
	"src/R6/BLOCK6.C"
	"src/R6/DAIR6.C"
	"src/R6/EGG6.C"
	"src/R6/ET6.C"
	"src/R6/FRIEND6.C"
	"src/R6/HACHI6.C"
	"src/R6/KDAI6.C"
	"src/R6/MINOMUSI.C"
	"src/R6/MOVIE6.C"
	"src/R6/PISTON6.C"
	"src/R6/SEESAW6.C"
	"src/R6/SEMI.C"
	"src/R6/SHOOT6.C"
	"src/R6/SW6.C"
	"src/R6/TOBIDAI6.C"
	"src/R6/TOBIRA6.C"
	"src/R6/TRAP_R6.C"
	"src/R6/UDBLK6.C"
	"src/R6/ZONETBL6.C"

	"src/R6/ACT61A.C"
	"src/R6/EDTBL61B.C"
	"src/R6/SCR61B.C"
	"src/R6/TOGEBL6B.C"
)

make_level(6 1 C ON
	"src/GAME.C"
	"src/PLAYSP.C"
	"src/PLAYSUB.C"
	"src/SCRCHK.C"
	"src/R6/BATTA.C"
	"src/R6/BEEM6.C"
	"src/R6/BLOCK6.C"
	"src/R6/DAIR6.C"
	"src/R6/EGG6.C"
	"src/R6/ET6.C"
	"src/R6/FRIEND6.C"
	"src/R6/HACHI6.C"
	"src/R6/KDAI6.C"
	"src/R6/MINOMUSI.C"
	"src/R6/MOVIE6.C"
	"src/R6/PISTON6.C"
	"src/R6/SEESAW6.C"
	"src/R6/SEMI.C"
	"src/R6/SHOOT6.C"
	"src/R6/SW6.C"
	"src/R6/TOBIDAI6.C"
	"src/R6/TOBIRA6.C"
	"src/R6/TRAP_R6.C"
	"src/R6/UDBLK6.C"
	"src/R6/ZONETBL6.C"

	"src/R6/ACT61A.C"
	"src/R6/EDTBL61C.C"
	"src/R6/SCR61C.C"
)

make_level(6 1 D ON
	"src/GAME.C"
	"src/PLAYSP.C"
	"src/PLAYSUB.C"
	"src/SCRCHK.C"
	"src/R6/BATTA.C"
	"src/R6/BEEM6.C"
	"src/R6/BLOCK6.C"
	"src/R6/DAIR6.C"
	"src/R6/EGG6.C"
	"src/R6/ET6.C"
	"src/R6/FRIEND6.C"
	"src/R6/HACHI6.C"
	"src/R6/KDAI6.C"
	"src/R6/MINOMUSI.C"
	"src/R6/MOVIE6.C"
	"src/R6/PISTON6.C"
	"src/R6/SEESAW6.C"
	"src/R6/SEMI.C"
	"src/R6/SHOOT6.C"
	"src/R6/SW6.C"
	"src/R6/TOBIDAI6.C"
	"src/R6/TOBIRA6.C"
	"src/R6/TRAP_R6.C"
	"src/R6/UDBLK6.C"
	"src/R6/ZONETBL6.C"

	"src/R6/ACT61A.C"
	"src/R6/EDTBL61C.C"
	"src/R6/SCR61D.C"
	"src/R6/TOGEBL6D.C"
)

make_level(6 2 A ON
	"src/GAME.C"
	"src/PLAYSP.C"
	"src/PLAYSUB.C"
	"src/SCRCHK.C"
	"src/R6/BATTA.C"
	"src/R6/BEEM6.C"
	"src/R6/BLOCK6.C"
	"src/R6/DAIR6.C"
	"src/R6/EGG6.C"
	"src/R6/ET6.C"
	"src/R6/FRIEND6.C"
	"src/R6/HACHI6.C"
	"src/R6/KDAI6.C"
	"src/R6/MINOMUSI.C"
	"src/R6/MOVIE6.C"
	"src/R6/PISTON6.C"
	"src/R6/SEESAW6.C"
	"src/R6/SEMI.C"
	"src/R6/SHOOT6.C"
	"src/R6/SW6.C"
	"src/R6/TOBIDAI6.C"
	"src/R6/TOBIRA6.C"
	"src/R6/TRAP_R6.C"
	"src/R6/UDBLK6.C"
	"src/R6/ZONETBL6.C"

	"src/R6/ACT62A.C"
	"src/R6/EDTBL62A.C"
	"src/R6/SCR62A.C"
	"src/R6/TOGEBL6A.C"
)

make_level(6 2 B ON
	"src/GAME.C"
	"src/PLAYSP.C"
	"src/PLAYSUB.C"
	"src/SCRCHK.C"
	"src/R6/BATTA.C"
	"src/R6/BEEM6.C"
	"src/R6/BLOCK6.C"
	"src/R6/DAIR6.C"
	"src/R6/EGG6.C"
	"src/R6/ET6.C"
	"src/R6/FRIEND6.C"
	"src/R6/HACHI6.C"
	"src/R6/KDAI6.C"
	"src/R6/MINOMUSI.C"
	"src/R6/MOVIE6.C"
	"src/R6/PISTON6.C"
	"src/R6/SEESAW6.C"
	"src/R6/SEMI.C"
	"src/R6/SHOOT6.C"
	"src/R6/SW6.C"
	"src/R6/TOBIDAI6.C"
	"src/R6/TOBIRA6.C"
	"src/R6/TRAP_R6.C"
	"src/R6/UDBLK6.C"
	"src/R6/ZONETBL6.C"

	"src/R6/ACT62A.C"
	"src/R6/EDTBL62B.C"
	"src/R6/SCR62B.C"
	"src/R6/TOGEBL6B.C"
)

make_level(6 2 C ON
	"src/GAME.C"
	"src/PLAYSP.C"
	"src/PLAYSUB.C"
	"src/SCRCHK.C"
	"src/R6/BATTA.C"
	"src/R6/BEEM6.C"
	"src/R6/BLOCK6.C"
	"src/R6/DAIR6.C"
	"src/R6/EGG6.C"
	"src/R6/ET6.C"
	"src/R6/FRIEND6.C"
	"src/R6/HACHI6.C"
	"src/R6/KDAI6.C"
	"src/R6/MINOMUSI.C"
	"src/R6/MOVIE6.C"
	"src/R6/PISTON6.C"
	"src/R6/SEESAW6.C"
	"src/R6/SEMI.C"
	"src/R6/SHOOT6.C"
	"src/R6/SW6.C"
	"src/R6/TOBIDAI6.C"
	"src/R6/TOBIRA6.C"
	"src/R6/TRAP_R6.C"
	"src/R6/UDBLK6.C"
	"src/R6/ZONETBL6.C"

	"src/R6/ACT62A.C"
	"src/R6/EDTBL62C.C"
	"src/R6/SCR62C.C"
	"src/R6/TOGEBL6D.C"
)

make_level(6 2 D ON
	"src/GAME.C"
	"src/PLAYSP.C"
	"src/PLAYSUB.C"
	"src/SCRCHK.C"
	"src/R6/BATTA.C"
	"src/R6/BEEM6.C"
	"src/R6/BLOCK6.C"
	"src/R6/DAIR6.C"
	"src/R6/EGG6.C"
	"src/R6/ET6.C"
	"src/R6/FRIEND6.C"
	"src/R6/HACHI6.C"
	"src/R6/KDAI6.C"
	"src/R6/MINOMUSI.C"
	"src/R6/MOVIE6.C"
	"src/R6/PISTON6.C"
	"src/R6/SEESAW6.C"
	"src/R6/SEMI.C"
	"src/R6/SHOOT6.C"
	"src/R6/SW6.C"
	"src/R6/TOBIDAI6.C"
	"src/R6/TOBIRA6.C"
	"src/R6/TRAP_R6.C"
	"src/R6/UDBLK6.C"
	"src/R6/ZONETBL6.C"

	"src/R6/ACT62A.C"
	"src/R6/EDTBL62D.C"
	"src/R6/SCR62D.C"
	"src/R6/TOGEBL6D.C"
)

make_level(6 3 C ON
	"src/GAME.C"
	"src/PLAYSP.C"
	"src/PLAYSUB.C"
	"src/SCRCHK.C"
	"src/R6/BATTA.C"
	"src/R6/BEEM6.C"
	"src/R6/BLOCK6.C"
	"src/R6/DAIR6.C"
	"src/R6/EGG6.C"
	"src/R6/ET6.C"
	"src/R6/FRIEND6.C"
	"src/R6/HACHI6.C"
	"src/R6/KDAI6.C"
	"src/R6/MINOMUSI.C"
	"src/R6/MOVIE6.C"
	"src/R6/PISTON6.C"
	"src/R6/SEESAW6.C"
	"src/R6/SEMI.C"
	"src/R6/SHOOT6.C"
	"src/R6/SW6.C"
	"src/R6/TOBIDAI6.C"
	"src/R6/TOBIRA6.C"
	"src/R6/TRAP_R6.C"
	"src/R6/UDBLK6.C"
	"src/R6/ZONETBL6.C"

	"src/R6/ACT63.C"
	"src/R6/BOSS_6.C"
	"src/R6/EDTBL63C.C"
	"src/R6/SCR63C.C"
	"src/R6/TOGEBL6D.C"
)

make_level(6 3 D ON
	"src/GAME.C"
	"src/PLAYSP.C"
	"src/PLAYSUB.C"
	"src/SCRCHK.C"
	"src/R6/BATTA.C"
	"src/R6/BEEM6.C"
	"src/R6/BLOCK6.C"
	"src/R6/DAIR6.C"
	"src/R6/EGG6.C"
	"src/R6/ET6.C"
	"src/R6/FRIEND6.C"
	"src/R6/HACHI6.C"
	"src/R6/KDAI6.C"
	"src/R6/MINOMUSI.C"
	"src/R6/MOVIE6.C"
	"src/R6/PISTON6.C"
	"src/R6/SEESAW6.C"
	"src/R6/SEMI.C"
	"src/R6/SHOOT6.C"
	"src/R6/SW6.C"
	"src/R6/TOBIDAI6.C"
	"src/R6/TOBIRA6.C"
	"src/R6/TRAP_R6.C"
	"src/R6/UDBLK6.C"
	"src/R6/ZONETBL6.C"

	"src/R6/ACT63.C"
	"src/R6/BOSS_6.C"
	"src/R6/EDTBL63C.C"
	"src/R6/SCR63D.C"
	"src/R6/TOGEBL6D.C"
)

make_level(7 1 A OFF
	"src/GAME.C"
	"src/PLAYSUB.C"
	"src/SCRCHK.C"
	"src/R7/BRANKO7.C"
	"src/R7/CHGBAN.C"
	"src/R7/CHGWALL7.C"
	"src/R7/DANGO7.C"
	"src/R7/ET7.C"
	"src/R7/FRIEND7.C"
	"src/R7/HOTARU7.C"
	"src/R7/KABASIRA.C"
	"src/R7/KANABUN.C"
	"src/R7/MOVIE7.C"
	"src/R7/PLAYSP7.C"
	"src/R7/SLIGHT7.C"
	"src/R7/TEKKYU7.C"
	"src/R7/TEKKYU7J.C"
	"src/R7/ZONETBL7.C"

	"src/R7/ACT71A.C"
	"src/R7/EDTBL7.C"
	"src/R7/SCR71A.C"
	"src/R7/WALL7.C"
)

make_level(7 1 B OFF
	"src/GAME.C"
	"src/PLAYSUB.C"
	"src/SCRCHK.C"
	"src/R7/BRANKO7.C"
	"src/R7/CHGBAN.C"
	"src/R7/CHGWALL7.C"
	"src/R7/DANGO7.C"
	"src/R7/ET7.C"
	"src/R7/FRIEND7.C"
	"src/R7/HOTARU7.C"
	"src/R7/KABASIRA.C"
	"src/R7/KANABUN.C"
	"src/R7/MOVIE7.C"
	"src/R7/PLAYSP7.C"
	"src/R7/SLIGHT7.C"
	"src/R7/TEKKYU7.C"
	"src/R7/TEKKYU7J.C"
	"src/R7/ZONETBL7.C"

	"src/R7/ACT71A.C"
	"src/R7/EDTBL7.C"
	"src/R7/SCR71B.C"
	"src/R7/WALL7.C"
)

make_level(7 1 C OFF
	"src/GAME.C"
	"src/PLAYSUB.C"
	"src/SCRCHK.C"
	"src/R7/BRANKO7.C"
	"src/R7/CHGBAN.C"
	"src/R7/CHGWALL7.C"
	"src/R7/DANGO7.C"
	"src/R7/ET7.C"
	"src/R7/FRIEND7.C"
	"src/R7/HOTARU7.C"
	"src/R7/KABASIRA.C"
	"src/R7/KANABUN.C"
	"src/R7/MOVIE7.C"
	"src/R7/PLAYSP7.C"
	"src/R7/SLIGHT7.C"
	"src/R7/TEKKYU7.C"
	"src/R7/TEKKYU7J.C"
	"src/R7/ZONETBL7.C"

	"src/R7/ACT71A.C"
	"src/R7/EDTBL7.C"
	"src/R7/SCR71C.C"
	"src/R7/WALL7.C"
)

make_level(7 1 D OFF
	"src/GAME.C"
	"src/PLAYSUB.C"
	"src/SCRCHK.C"
	"src/R7/BRANKO7.C"
	"src/R7/CHGBAN.C"
	"src/R7/CHGWALL7.C"
	"src/R7/DANGO7.C"
	"src/R7/ET7.C"
	"src/R7/FRIEND7.C"
	"src/R7/HOTARU7.C"
	"src/R7/KABASIRA.C"
	"src/R7/KANABUN.C"
	"src/R7/MOVIE7.C"
	"src/R7/PLAYSP7.C"
	"src/R7/SLIGHT7.C"
	"src/R7/TEKKYU7.C"
	"src/R7/TEKKYU7J.C"
	"src/R7/ZONETBL7.C"

	"src/R7/ACT71A.C"
	"src/R7/EDTBL7.C"
	"src/R7/SCR71D.C"
	"src/R7/WALL7.C"
)

make_level(7 2 A OFF
	"src/GAME.C"
	"src/PLAYSUB.C"
	"src/SCRCHK.C"
	"src/R7/BRANKO7.C"
	"src/R7/CHGBAN.C"
	"src/R7/CHGWALL7.C"
	"src/R7/DANGO7.C"
	"src/R7/ET7.C"
	"src/R7/FRIEND7.C"
	"src/R7/HOTARU7.C"
	"src/R7/KABASIRA.C"
	"src/R7/KANABUN.C"
	"src/R7/MOVIE7.C"
	"src/R7/PLAYSP7.C"
	"src/R7/SLIGHT7.C"
	"src/R7/TEKKYU7.C"
	"src/R7/TEKKYU7J.C"
	"src/R7/ZONETBL7.C"

	"src/R7/ACT71A.C"
	"src/R7/EDTBL7.C"
	"src/R7/SCR72A.C"
	"src/R7/WALL7.C"
)

make_level(7 2 B OFF
	"src/GAME.C"
	"src/PLAYSUB.C"
	"src/SCRCHK.C"
	"src/R7/BRANKO7.C"
	"src/R7/CHGBAN.C"
	"src/R7/CHGWALL7.C"
	"src/R7/DANGO7.C"
	"src/R7/ET7.C"
	"src/R7/FRIEND7.C"
	"src/R7/HOTARU7.C"
	"src/R7/KABASIRA.C"
	"src/R7/KANABUN.C"
	"src/R7/MOVIE7.C"
	"src/R7/PLAYSP7.C"
	"src/R7/SLIGHT7.C"
	"src/R7/TEKKYU7.C"
	"src/R7/TEKKYU7J.C"
	"src/R7/ZONETBL7.C"

	"src/R7/ACT71A.C"
	"src/R7/EDTBL7.C"
	"src/R7/SCR72B.C"
	"src/R7/WALL7.C"
)

make_level(7 2 C OFF
	"src/GAME.C"
	"src/PLAYSUB.C"
	"src/SCRCHK.C"
	"src/R7/BRANKO7.C"
	"src/R7/CHGBAN.C"
	"src/R7/CHGWALL7.C"
	"src/R7/DANGO7.C"
	"src/R7/ET7.C"
	"src/R7/FRIEND7.C"
	"src/R7/HOTARU7.C"
	"src/R7/KABASIRA.C"
	"src/R7/KANABUN.C"
	"src/R7/MOVIE7.C"
	"src/R7/PLAYSP7.C"
	"src/R7/SLIGHT7.C"
	"src/R7/TEKKYU7.C"
	"src/R7/TEKKYU7J.C"
	"src/R7/ZONETBL7.C"

	"src/R7/ACT71A.C"
	"src/R7/EDTBL7.C"
	"src/R7/SCR72C.C"
	"src/R7/WALL7.C"
)

make_level(7 2 D OFF
	"src/GAME.C"
	"src/PLAYSUB.C"
	"src/SCRCHK.C"
	"src/R7/BRANKO7.C"
	"src/R7/CHGBAN.C"
	"src/R7/CHGWALL7.C"
	"src/R7/DANGO7.C"
	"src/R7/ET7.C"
	"src/R7/FRIEND7.C"
	"src/R7/HOTARU7.C"
	"src/R7/KABASIRA.C"
	"src/R7/KANABUN.C"
	"src/R7/MOVIE7.C"
	"src/R7/PLAYSP7.C"
	"src/R7/SLIGHT7.C"
	"src/R7/TEKKYU7.C"
	"src/R7/TEKKYU7J.C"
	"src/R7/ZONETBL7.C"

	"src/R7/ACT71A.C"
	"src/R7/EDTBL7.C"
	"src/R7/SCR72D.C"
	"src/R7/WALL7.C"
)

make_level(7 3 C OFF
	"src/GAME.C"
	"src/PLAYSUB.C"
	"src/SCRCHK.C"
	"src/R7/BRANKO7.C"
	"src/R7/CHGBAN.C"
	"src/R7/CHGWALL7.C"
	"src/R7/DANGO7.C"
	"src/R7/ET7.C"
	"src/R7/FRIEND7.C"
	"src/R7/HOTARU7.C"
	"src/R7/KABASIRA.C"
	"src/R7/KANABUN.C"
	"src/R7/MOVIE7.C"
	"src/R7/PLAYSP7.C"
	"src/R7/SLIGHT7.C"
	"src/R7/TEKKYU7.C"
	"src/R7/TEKKYU7J.C"
	"src/R7/ZONETBL7.C"

	"src/R7/ACT71A.C"
	"src/R7/BOSS_7.C"
	"src/R7/EDTBL73.C"
	"src/R7/EMIE7.C"
	"src/R7/EMIE7CG.C"
	"src/R7/GAITOU73.C"
	"src/R7/HARI73.C"
	"src/R7/SCR71C.C"
	"src/R7/WALL7.C"
	"src/R7/WALL73.C"
)

make_level(7 3 D OFF
	"src/GAME.C"
	"src/PLAYSUB.C"
	"src/SCRCHK.C"
	"src/R7/BRANKO7.C"
	"src/R7/CHGBAN.C"
	"src/R7/CHGWALL7.C"
	"src/R7/DANGO7.C"
	"src/R7/ET7.C"
	"src/R7/FRIEND7.C"
	"src/R7/HOTARU7.C"
	"src/R7/KABASIRA.C"
	"src/R7/KANABUN.C"
	"src/R7/MOVIE7.C"
	"src/R7/PLAYSP7.C"
	"src/R7/SLIGHT7.C"
	"src/R7/TEKKYU7.C"
	"src/R7/TEKKYU7J.C"
	"src/R7/ZONETBL7.C"

	"src/R7/ACT71A.C"
	"src/R7/BOSS_7.C"
	"src/R7/EDTBL73.C"
	"src/R7/EMIE7.C"
	"src/R7/EMIE7CG.C"
	"src/R7/GAITOU73.C"
	"src/R7/HARI73.C"
	"src/R7/SCR71D.C"
	"src/R7/WALL7.C"
	"src/R7/WALL73.C"
)

make_level(8 1 A ON
	"src/GAME.C"
	"src/PLAYSUB.C"
	"src/ZONETBL1.C"
	"src/R8/BEAM.C"
	"src/R8/BIGBOM8.C"
	"src/R8/DAI8.C"
	"src/R8/DANGO8.C"
	"src/R8/EMIE8.C"
	"src/R8/ET8.C"
	"src/R8/FRIEND8.C"
	"src/R8/HACHI8.C"
	"src/R8/HAGURUMA.C"
	"src/R8/JETTOGE8.C"
	"src/R8/KABUTO8.C"
	"src/R8/KOMA8.C"
	"src/R8/KUZURE8.C"
	"src/R8/LEGMECA8.C"
	"src/R8/NOKOGIRI.C"
	"src/R8/OKUSIESO.C"
	"src/R8/PIPE8.C"
	"src/R8/PISTON.C"
	"src/R8/PLAYSP8.C"
	"src/R8/PROPERA8.C"
	"src/R8/SCARAB.C"
	"src/R8/SCRCHK8.C"
	"src/R8/SHOOT.C"
	"src/R8/SHUT.C"
	"src/R8/SW8.C"
	"src/R8/TOBIRA.C"

	"src/R8/ACT81A.C"
	"src/R8/EDTBL81.C"
	"src/R8/KONBEA.C"
	"src/R8/SCR81A.C"
	"src/R8/TRAP_R81.C"
)

make_level(8 1 B OFF
	"src/GAME.C"
	"src/PLAYSUB.C"
	"src/ZONETBL1.C"
	"src/R8/BEAM.C"
	"src/R8/BIGBOM8.C"
	"src/R8/DAI8.C"
	"src/R8/DANGO8.C"
	"src/R8/EMIE8.C"
	"src/R8/ET8.C"
	"src/R8/FRIEND8.C"
	"src/R8/HACHI8.C"
	"src/R8/HAGURUMA.C"
	"src/R8/JETTOGE8.C"
	"src/R8/KABUTO8.C"
	"src/R8/KOMA8.C"
	"src/R8/KUZURE8.C"
	"src/R8/LEGMECA8.C"
	"src/R8/NOKOGIRI.C"
	"src/R8/OKUSIESO.C"
	"src/R8/PIPE8.C"
	"src/R8/PISTON.C"
	"src/R8/PLAYSP8.C"
	"src/R8/PROPERA8.C"
	"src/R8/SCARAB.C"
	"src/R8/SCRCHK8.C"
	"src/R8/SHOOT.C"
	"src/R8/SHUT.C"
	"src/R8/SW8.C"
	"src/R8/TOBIRA.C"

	"src/R8/ACT81A.C"
	"src/R8/EDTBL81.C"
	"src/R8/KONBEA.C"
	"src/R8/SCR81B.C"
	"src/R8/TRAP_R81.C"
)

make_level(8 1 C ON
	"src/GAME.C"
	"src/PLAYSUB.C"
	"src/ZONETBL1.C"
	"src/R8/BEAM.C"
	"src/R8/BIGBOM8.C"
	"src/R8/DAI8.C"
	"src/R8/DANGO8.C"
	"src/R8/EMIE8.C"
	"src/R8/ET8.C"
	"src/R8/FRIEND8.C"
	"src/R8/HACHI8.C"
	"src/R8/HAGURUMA.C"
	"src/R8/JETTOGE8.C"
	"src/R8/KABUTO8.C"
	"src/R8/KOMA8.C"
	"src/R8/KUZURE8.C"
	"src/R8/LEGMECA8.C"
	"src/R8/NOKOGIRI.C"
	"src/R8/OKUSIESO.C"
	"src/R8/PIPE8.C"
	"src/R8/PISTON.C"
	"src/R8/PLAYSP8.C"
	"src/R8/PROPERA8.C"
	"src/R8/SCARAB.C"
	"src/R8/SCRCHK8.C"
	"src/R8/SHOOT.C"
	"src/R8/SHUT.C"
	"src/R8/SW8.C"
	"src/R8/TOBIRA.C"

	"src/R8/ACT81A.C"
	"src/R8/EDTBL81.C"
	"src/R8/KONBEA.C"
	"src/R8/SCR81C.C"
	"src/R8/TRAP_R81.C"
)

make_level(8 1 D ON
	"src/GAME.C"
	"src/PLAYSUB.C"
	"src/ZONETBL1.C"
	"src/R8/BEAM.C"
	"src/R8/BIGBOM8.C"
	"src/R8/DAI8.C"
	"src/R8/DANGO8.C"
	"src/R8/EMIE8.C"
	"src/R8/ET8.C"
	"src/R8/FRIEND8.C"
	"src/R8/HACHI8.C"
	"src/R8/HAGURUMA.C"
	"src/R8/JETTOGE8.C"
	"src/R8/KABUTO8.C"
	"src/R8/KOMA8.C"
	"src/R8/KUZURE8.C"
	"src/R8/LEGMECA8.C"
	"src/R8/NOKOGIRI.C"
	"src/R8/OKUSIESO.C"
	"src/R8/PIPE8.C"
	"src/R8/PISTON.C"
	"src/R8/PLAYSP8.C"
	"src/R8/PROPERA8.C"
	"src/R8/SCARAB.C"
	"src/R8/SCRCHK8.C"
	"src/R8/SHOOT.C"
	"src/R8/SHUT.C"
	"src/R8/SW8.C"
	"src/R8/TOBIRA.C"

	"src/R8/ACT81A.C"
	"src/R8/EDTBL81.C"
	"src/R8/KONBEA.C"
	"src/R8/SCR81D.C"
	"src/R8/TRAP_R81.C"
)

make_level(8 2 A ON
	"src/GAME.C"
	"src/PLAYSUB.C"
	"src/ZONETBL1.C"
	"src/R8/BEAM.C"
	"src/R8/BIGBOM8.C"
	"src/R8/DAI8.C"
	"src/R8/DANGO8.C"
	"src/R8/EMIE8.C"
	"src/R8/ET8.C"
	"src/R8/FRIEND8.C"
	"src/R8/HACHI8.C"
	"src/R8/HAGURUMA.C"
	"src/R8/JETTOGE8.C"
	"src/R8/KABUTO8.C"
	"src/R8/KOMA8.C"
	"src/R8/KUZURE8.C"
	"src/R8/LEGMECA8.C"
	"src/R8/NOKOGIRI.C"
	"src/R8/OKUSIESO.C"
	"src/R8/PIPE8.C"
	"src/R8/PISTON.C"
	"src/R8/PLAYSP8.C"
	"src/R8/PROPERA8.C"
	"src/R8/SCARAB.C"
	"src/R8/SCRCHK8.C"
	"src/R8/SHOOT.C"
	"src/R8/SHUT.C"
	"src/R8/SW8.C"
	"src/R8/TOBIRA.C"

	"src/R8/ACT82A.C"
	"src/R8/EDTBL82.C"
	"src/R8/KONBEA.C"
	"src/R8/SCR82A.C"
	"src/R8/TRAP_R82.C"
)

make_level(8 2 B ON
	"src/GAME.C"
	"src/PLAYSUB.C"
	"src/ZONETBL1.C"
	"src/R8/BEAM.C"
	"src/R8/BIGBOM8.C"
	"src/R8/DAI8.C"
	"src/R8/DANGO8.C"
	"src/R8/EMIE8.C"
	"src/R8/ET8.C"
	"src/R8/FRIEND8.C"
	"src/R8/HACHI8.C"
	"src/R8/HAGURUMA.C"
	"src/R8/JETTOGE8.C"
	"src/R8/KABUTO8.C"
	"src/R8/KOMA8.C"
	"src/R8/KUZURE8.C"
	"src/R8/LEGMECA8.C"
	"src/R8/NOKOGIRI.C"
	"src/R8/OKUSIESO.C"
	"src/R8/PIPE8.C"
	"src/R8/PISTON.C"
	"src/R8/PLAYSP8.C"
	"src/R8/PROPERA8.C"
	"src/R8/SCARAB.C"
	"src/R8/SCRCHK8.C"
	"src/R8/SHOOT.C"
	"src/R8/SHUT.C"
	"src/R8/SW8.C"
	"src/R8/TOBIRA.C"

	"src/R8/ACT82A.C"
	"src/R8/EDTBL82.C"
	"src/R8/KONBEA.C"
	"src/R8/SCR82B.C"
	"src/R8/TRAP_R82.C"
)

make_level(8 2 C ON
	"src/GAME.C"
	"src/PLAYSUB.C"
	"src/ZONETBL1.C"
	"src/R8/BEAM.C"
	"src/R8/BIGBOM8.C"
	"src/R8/DAI8.C"
	"src/R8/DANGO8.C"
	"src/R8/EMIE8.C"
	"src/R8/ET8.C"
	"src/R8/FRIEND8.C"
	"src/R8/HACHI8.C"
	"src/R8/HAGURUMA.C"
	"src/R8/JETTOGE8.C"
	"src/R8/KABUTO8.C"
	"src/R8/KOMA8.C"
	"src/R8/KUZURE8.C"
	"src/R8/LEGMECA8.C"
	"src/R8/NOKOGIRI.C"
	"src/R8/OKUSIESO.C"
	"src/R8/PIPE8.C"
	"src/R8/PISTON.C"
	"src/R8/PLAYSP8.C"
	"src/R8/PROPERA8.C"
	"src/R8/SCARAB.C"
	"src/R8/SCRCHK8.C"
	"src/R8/SHOOT.C"
	"src/R8/SHUT.C"
	"src/R8/SW8.C"
	"src/R8/TOBIRA.C"

	"src/R8/ACT82A.C"
	"src/R8/EDTBL82.C"
	"src/R8/KONBEA.C"
	"src/R8/SCR82C.C"
	"src/R8/TRAP_R82.C"
)

make_level(8 2 D ON
	"src/GAME.C"
	"src/PLAYSUB.C"
	"src/ZONETBL1.C"
	"src/R8/BEAM.C"
	"src/R8/BIGBOM8.C"
	"src/R8/DAI8.C"
	"src/R8/DANGO8.C"
	"src/R8/EMIE8.C"
	"src/R8/ET8.C"
	"src/R8/FRIEND8.C"
	"src/R8/HACHI8.C"
	"src/R8/HAGURUMA.C"
	"src/R8/JETTOGE8.C"
	"src/R8/KABUTO8.C"
	"src/R8/KOMA8.C"
	"src/R8/KUZURE8.C"
	"src/R8/LEGMECA8.C"
	"src/R8/NOKOGIRI.C"
	"src/R8/OKUSIESO.C"
	"src/R8/PIPE8.C"
	"src/R8/PISTON.C"
	"src/R8/PLAYSP8.C"
	"src/R8/PROPERA8.C"
	"src/R8/SCARAB.C"
	"src/R8/SCRCHK8.C"
	"src/R8/SHOOT.C"
	"src/R8/SHUT.C"
	"src/R8/SW8.C"
	"src/R8/TOBIRA.C"

	"src/R8/ACT82A.C"
	"src/R8/EDTBL82.C"
	"src/R8/KONBEA.C"
	"src/R8/SCR82D.C"
	"src/R8/TRAP_R82.C"
)

make_level(8 3 C ON
	"src/GAME.C"
	"src/PLAYSUB.C"
	"src/ZONETBL1.C"
	"src/R3/BOBIN.C" # ?!
	"src/R8/BEAM.C"
	"src/R8/BIGBOM8.C"
	"src/R8/DAI8.C"
	"src/R8/DANGO8.C"
	"src/R8/EMIE8.C"
	"src/R8/ET8.C"
	"src/R8/FRIEND8.C"
	"src/R8/HACHI8.C"
	"src/R8/HAGURUMA.C"
	"src/R8/JETTOGE8.C"
	"src/R8/KABUTO8.C"
	"src/R8/KOMA8.C"
	"src/R8/KUZURE8.C"
	"src/R8/LEGMECA8.C"
	"src/R8/NOKOGIRI.C"
	"src/R8/OKUSIESO.C"
	"src/R8/PIPE8.C"
	"src/R8/PISTON.C"
	"src/R8/PLAYSP8.C"
	"src/R8/PROPERA8.C"
	"src/R8/SCARAB.C"
	"src/R8/SCRCHK8.C"
	"src/R8/SHOOT.C"
	"src/R8/SHUT.C"
	"src/R8/SW8.C"
	"src/R8/TOBIRA.C"

	"src/R8/ACT83.C"
	"src/R8/BOSS_8.C"
	"src/R8/EDTBL83.C"
	"src/R8/HOTA8C.C"
	"src/R8/KONBEA83.C"
	"src/R8/SCR83C.C"
	"src/R8/TRAP_R83.C"
)

make_level(8 3 D ON
	"src/GAME.C"
	"src/PLAYSUB.C"
	"src/ZONETBL1.C"
	"src/R3/BOBIN.C" # ?!
	"src/R8/BEAM.C"
	"src/R8/BIGBOM8.C"
	"src/R8/DAI8.C"
	"src/R8/DANGO8.C"
	"src/R8/EMIE8.C"
	"src/R8/ET8.C"
	"src/R8/FRIEND8.C"
	"src/R8/HACHI8.C"
	"src/R8/HAGURUMA.C"
	"src/R8/JETTOGE8.C"
	"src/R8/KABUTO8.C"
	"src/R8/KOMA8.C"
	"src/R8/KUZURE8.C"
	"src/R8/LEGMECA8.C"
	"src/R8/NOKOGIRI.C"
	"src/R8/OKUSIESO.C"
	"src/R8/PIPE8.C"
	"src/R8/PISTON.C"
	"src/R8/PLAYSP8.C"
	"src/R8/PROPERA8.C"
	"src/R8/SCARAB.C"
	"src/R8/SCRCHK8.C"
	"src/R8/SHOOT.C"
	"src/R8/SHUT.C"
	"src/R8/SW8.C"
	"src/R8/TOBIRA.C"

	"src/R8/ACT83.C"
	"src/R8/BOSS_8.C"
	"src/R8/EDTBL83.C"
	"src/R8/HOTA8D.C"
	"src/R8/KONBEA83.C"
	"src/R8/SCR83D.C"
	"src/R8/TRAP_R83.C"
)

